--- a/L1-model_prompt_parser.ipynb
+++ b/L1-model_prompt_parser.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,27 @@
     "        messages=messages,\n",
     "        temperature=0\n",
     "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1+1 equals 2.'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_completion(\"What is 1+1?\")"
    ]
   },
   {
@@ -71,9 +91,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "get_completion(\"What is 1+1?\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
